--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,3 +1,26 @@
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="#">INVO</a>
+            <?php echo $this->elements->getMenu() ?>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <?php echo $this->getContent() ?>
+    <hr>
 <?php 
 echo "<h1>Hello!</h1>";
 echo Phalcon\Tag::linkTo("signup", "Sign Up Here!");
+?>
+    <footer>
+        <p>&copy; Company 2012</p>
+    </footer>
+</div>
+
