--- a/app/views/photography/album.phtml
+++ b/app/views/photography/album.phtml
@@ -15,7 +15,7 @@
           <div style="width:165px;height:120px;background:#EEE;border:1px solid #ccc;text-align:center;float:left;margin:0 0 5px 5px;display:inline;overflow:hidden;">
             <div style="width:128px;margin:5px;">
                 <a href="/photography/view/<?php echo $collection?>/<?php echo $lattice['album'] ?>/" rel="nofollow">
-                    <img src="/<?php echo $lattice['cover']?>" alt="view..."/>
+                    <img src="/photography/thumbnail/<?php echo $lattice['cover']?>" alt="view..."/>
                 </a>
             </div>
 
