--- a/app/views/photography/view.phtml
+++ b/app/views/photography/view.phtml
@@ -3,11 +3,11 @@
 <div class="mainWrap">
 
 	<div class="main-module">
-		<div class="head"><h2><?php echo $collection ?> - 著作权所有，禁止转载，禁止商业用途，商业用途，请联系本人。</h2></div>
+		<div class="head"><h2><?php echo $collection.'/'.$album ?> - 著作权所有，禁止转载，禁止商业用途，商业用途，请联系本人。</h2></div>
 		<div class="body">
 		</div>
 	</div>
-
+<?php if($matrixs){ ?>
 <?php foreach ($matrixs as $matrix) { ?>
 	<div style="margin-left:5px;float:left;display:inline;">
 		<?php  foreach ($matrix as $photo) { ?>
@@ -15,13 +15,14 @@
           <div style="width:165px;height:200px;background:#EEE;border:1px solid #ccc;text-align:center;float:left;margin:0 0 5px 5px;display:inline;overflow:hidden;">
             <div style="width:128px;margin:5px;">
                 <a href="/photography/photo/<?php echo $collection?>/<?php echo $album ?>/<?php echo $photo ?>/" rel="nofollow">
-                    <img src="/images/<?php echo $collection?>/<?php echo $album ?>/<?php echo $photo ?>" alt="Thumbnail..."/>
+                    <img src="/photography/thumbnail/<?php echo $collection?>/<?php echo $album ?>/<?php echo $photo ?>" alt="Thumbnail..."/>
                 </a>
             </div>
           </div>		
 		
 		<?php } ?>
 	</div>
+<?php } ?>
 <?php } ?>
 		<!--
 		<div class="gumball">
@@ -51,14 +52,14 @@
 <div class="sideWrap">
 	<div class="side-module">
 	  <div class="head">
-		<h2>Photo photos - <?php echo $collection ?></h2>
+		<h2>Photo photos - <?php echo $collection ?>/<?php echo $album ?></h2>
 	  </div>
 	  <div class="body">
-	  <?php if($photos){ ?>
+	  <?php if($albums){ ?>
 		<ul>
-		<?php  foreach ($photos as $photo) { ?>
+		<?php  foreach ($albums as $photo) { ?>
 			<li>
-				<a href="/photography/thumbnail/<?php echo $collection?>/<?php echo $photo ?>/"><?php echo $photo ?></a>
+				<a href="/photography/view/<?php echo $collection?>/<?php echo $photo ?>/"><?php echo $photo ?></a>
 			</li>
 		<?php } /* <a href="/{$locale}/photography/photo/photo/{$history}/{$md5}/"><b style="color:orange">{$photo}</b></a> */ ?>
 		</ul>
