--- a/app/views/photography/photo.phtml
+++ b/app/views/photography/photo.phtml
@@ -57,15 +57,17 @@
 
 ?>
 
-<?php foreach($related as $image) { ?>
-<div style="width:98px;height:80px;background:#EEE;border:1px solid #ccc;text-align:center;float:left;margin:0 0 5px 5px;display:inline;overflow:hidden;">
-	<div style="width:95px;margin:3px;">
+
+<div class="photo_relate">
+	<?php foreach($related as $image) { ?>
+	<div class="relate">
 		<a href="/photography/photo/<?php echo $collection?>/<?php echo $album ?>/<?php echo $image ?>" rel="nofollow">
-        <img style="width:128px;" src="/photography/thumbnail/<?php echo $collection?>/<?php echo $album ?>/<?php echo $image ?>" alt="Thumbnail..."/>
+        <img src="/photography/thumbnail/<?php echo $collection?>/<?php echo $album ?>/<?php echo $image ?>" alt="Thumbnail..."/>
 		</a>
 	</div>
+	<?php } ?>
 </div>
-<?php } ?>
+
 
 
 <!--	
