--- a/app/views/layouts/index.phtml
+++ b/app/views/layouts/index.phtml
@@ -6,7 +6,8 @@
 <style type="text/css">
 body,table,input,textarea,select {font-family:微软雅黑,Verdana,sans-serif,宋体;}  
 </style>
- 
+<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </head>
 <body>
 <div id="global-header">
