--- a/app/views/radio/zone.phtml
+++ b/app/views/radio/zone.phtml
@@ -2,13 +2,13 @@
 <div class="main-module">
     <div class=head><H2>CQ Zone map</H2></div>
     <div class=body>
-        <img src="/images/radio/cqzone.gif" alt="CQ Zone map" />
+        <img src="/img/radio/cqzone.gif" alt="CQ Zone map" />
     </div>
 </div>
 <div class="main-module">
     <div class=head><H2>ITU Zone map</H2></div>
     <div class=body>
-        <img src="/images/radio/ituzone.jpg" alt="ITU Zone map" />
+        <img src="/img/radio/ituzone.jpg" alt="ITU Zone map" />
     </div>
 </div>
 </div>
