--- a/app/views/member/sidebar.phtml
+++ b/app/views/member/sidebar.phtml
@@ -3,7 +3,9 @@
             <div class="body">
                 <ul>
                     <li><a href="/member/profile">用户详细资料</a></li>
-                    <li><a href="/member/profile">消息订阅</a></li>
+                    <li><a href="/member/profile">电台资料</a></li>
+                    <li><a href="/member/profile">户外资料</a></li>
+                    <li><a href="/member/profile">摄影资料</a></li>
                     <li><a href="/member/profile">消息订阅</a></li>
                 </ul>
                 <div class="divider solid"></div>
