--- a/app/views/technology/index.phtml
+++ b/app/views/technology/index.phtml
@@ -1,7 +1,7 @@
-<div class="wrapper">
 
-<div class="mainWrap">
-
+	<a href="http://netkiller-github-com.iteye.com/">ITEYE 博客</a> | 
+	<a href="http://my.oschina.net/neochen/">OSChina 博客</a> | 
+	<a href="http://rline.blog.51cto.com/">51CTO 博客</a>
     <div class="main-module">
 		<div class="head"><h2>原创文档</h2></div>
 		<div class="body">
@@ -32,42 +32,4 @@
 	   	</div>
 		<div class="foot"></div>
 	</div>
-    
-</div>
-<div class="sideWrap">
-	<div class="side-module">
-	  <div class="head">
-		<h2>工具箱</h2>
-	  </div>
-	  <div class="body">
-	  		<ul>
-			<li>
-				<a href="/technology/ip">IP归属地查询</a>
-			</li>
-         
-			<li>
-				<a href="/technology/myip">我的IP地址</a>
-			</li>
-<!--               
-			<li>
-				<a href="/photography/view/2014/KKK/">KKK</a>
-			</li>
-			<li>
-				<a href="/photography/view/2014/aaa/">aaa</a>
-			</li>
-			<li>
-				<a href="/photography/view/2014/golden/">golden</a>
-			</li>
--->
-            </ul>
-
-			<div class="divider solid"></div>
-		<div class="foot-links">
-            <a href=""></a> 
-        </div>
-	  </div>
-	  <div class="foot"></div>
-	</div>
-</div>
-
-</div>    
+   
