采用多模块管理

--- a/app/views/layouts/home.phtml
+++ b/app/views/layouts/home.phtml
@@ -4,18 +4,7 @@
 	<?php echo $this->tag->getTitle() ?>
 </head>
 <body>
-<div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <?php echo $this->elements->getMenu() ?>
-        </div>
-    </div>
-</div>
+
 <div class="sidebar">
 <ul class="menu">
     <li><a href="/">Home</a></li>
@@ -23,12 +12,12 @@
     <li><a href="/contact">Contact us</a></li>
 </ul>
 </div>
+<?php $this->partial("shared/header") ?>	
 <div class="container">
 	<?php echo $this->getContent() ?>
 </div>	
-    <footer>
-        <p>&copy; Company 2012</p>
-    </footer>	
+
+<?php $this->partial("shared/footer") ?>	
 	
 </body>
 </html>
