--- a/app/views/member/index.phtml
+++ b/app/views/member/index.phtml
@@ -39,18 +39,13 @@ map.addEventListener("click", function(e){
 
 <?php use Phalcon\Tag; ?>
 <?php 
-if($member){
-Phalcon\Tag::setDefaults(array(
-    "username" => $member->username,
-    "password" => $member->password,
-    "callsign" => $member->callsign
-        ));
+
 ?>
 
 
-<?php }else{?>
+<?php ?>
 
-<?php } ?>
+<?php ?>
 
     </div>
     <div class="sideWrap">
