--- a/app/views/member/sidebar.phtml
+++ b/app/views/member/sidebar.phtml
@@ -1,15 +1,30 @@
-        <div class="side-module">
-            <div class="head"><h2>用户信息管理</h2></div>
-            <div class="body">
-                <ul>
-                    <li><a href="/member/profile">用户详细资料</a></li>
-                    <li><a href="/member/profile">电台资料</a></li>
-                    <li><a href="/member/profile">户外资料</a></li>
-                    <li><a href="/member/profile">摄影资料</a></li>
-                    <li><a href="/member/profile">消息订阅</a></li>
-                </ul>
-                <div class="divider solid"></div>
-                <div class="foot-links"><a href="/member/">返回用户主页</a></div>
-            </div>
-            <div class="foot"></div>
-        </div>
+<div class="side-module">
+    <div class="head"><h2>用户信息管理</h2></div>
+    <div class="body">
+        <ul>
+            <li><a href="/member/profile">用户详细资料</a></li>
+            <li><a href="/member/profile">户外资料</a></li>
+            <li><a href="/member/profile">摄影资料</a></li>
+            <li><a href="/member/profile">消息订阅</a></li>
+        </ul>
+        <div class="divider solid"></div>
+        <div class="foot-links"><a href="/member/">返回用户主页</a></div>
+    </div>
+    <div class="foot"></div>
+</div>
+
+<div class="side-module">
+    <div class="head"><h2>业余无线电台</h2></div>
+    <div class="body">
+        <ul>
+            <li><a href="/radio/profile/callsign">呼号管理</a></li>
+            <li><a href="/radio/profile/qth">设台详细资料</a></li>
+            <li><a href="/radio/logging/mgmt/">电台日志</a></li>
+            <li><a href="/radio/repeater/mgmt/">中继台管理</a></li>
+            <li><a href="/radio/qsl">QSL卡片管理</a></li>
+        </ul>
+        <div class="divider solid"></div>
+        <div class="foot-links"><a href="/radio/">业余无线主页</a></div>
+    </div>
+    <div class="foot"></div>
+</div>
