--- a/app/views/member/sidebar.phtml
+++ b/app/views/member/sidebar.phtml
@@ -18,9 +18,10 @@
     <div class="body">
         <ul>
             <li><a href="/radio/profile/callsign">呼号管理</a></li>
-            <li><a href="/radio/profile/qth">设台详细资料</a></li>
-            <li><a href="/radio/logging/mgmt/">电台日志</a></li>
+            <li><a href="/radio/profile/qth">设台资料管理</a></li>
+            <li><a href="/radio/logging/mgmt/">电台日志管理</a></li>
             <li><a href="/radio/repeater/mgmt/">中继台管理</a></li>
+            <li><a href="/radio/profile/mail">QSL卡片邮寄地址管理</a></li>
             <li><a href="/radio/qsl">QSL卡片管理</a></li>
         </ul>
         <div class="divider solid"></div>
