修正导航栏

--- a/app/radio/views/repeater/details.phtml
+++ b/app/radio/views/repeater/details.phtml
@@ -54,6 +54,7 @@ map.addOverlay(circle);
             <li>差频: <?php echo $repeater->shift?></li>
             <li>静噪: <?php echo $repeater->squelch?></li>
             <li>哑音: <?php echo $repeater->code?></li>
+            <li>波段: <?php echo $repeater->band?></li>
             <li>坐标: <?php echo $repeater->coordinate?></li>
             <li>分区: <?php echo $repeater->zone['cq']?>,<?php echo $repeater->zone['itu']?></li>
             <li>台主: <?php echo $repeater->owner?></li>
