--- a/app/technology/views/layouts/book.phtml
+++ b/app/technology/views/layouts/book.phtml
@@ -1,8 +1,12 @@
+<?php echo $this->getContent() ?>
+<?php /*
 <div class="wrapper">
     <div class="mainWrap">
-		<?php echo $this->getContent() ?>
+		
 	</div>
     <div class="sideWrap">
-        <?php $this->partial("sidebar") ?>
+        <?php $this->partial("book/sidebar") ?>
     </div>
 </div>
+ * 
+ */?>
