--- a/app/technology/views/book/index.phtml
+++ b/app/technology/views/book/index.phtml
@@ -1,3 +1,6 @@
+<div class="wrapper">
+    <div class="mainWrap">
+        
 
 	<a href="http://netkiller-github-com.iteye.com/">ITEYE 博客</a> | 
 	<a href="http://my.oschina.net/neochen/">OSChina 博客</a> | 
@@ -5,31 +8,53 @@
     <div class="main-module">
 		<div class="head"><h2>原创文档</h2></div>
 		<div class="body">
-		<div style="float:left;">
-			<ul>
-				<li><a href="/technology/linux/index.html">Netkiller Linux 手札</a></li>
-			  	<li><a href="/technology/developer/index.html">Netkiller Developer 手札</a></li>
-				<li><a href="/technology/security/index.html">Netkiller Security 手札</a></li>
-				<li><a href="/technology/docbook/index.html">Netkiller Document 手札</a></li>
-				<li><a href="/technology/database/index.html">Netkiller Database 手札</a></li>
-				<li><a href="/technology/ubuntu/index.html">Netkiller Ubuntu 手札</a></li>
-				<li><a href="/technology/centos/index.html">Netkiller CentOS 手札</a></li>
-				<li><a href="/technology/freebsd/index.html">Netkiller FreeBSD 手札</a></li>
-				
-			</ul>
-		</div>	
-		<div style="float:left;">	
-		<ul>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/architect/index.html">Netkiller Architect 手札</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/architect/index.html">大型网站架设指南</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/postgres/postgresql.html">PostgreSQL 实例参考</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/postfix/index.html">Postfix Solution</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/pureftpd/index.html">PureFTPD</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/proftpd/index.html">ProFTPD</a></li>
-			<li><a href="/technology/" class="score-812.5 endless-pages-found-next-link">More &gt;&gt;&gt;</a></li>		
-		</ul>
-		</div>
+
+<h1 id="how-to-contribute-to-open-source">How to contribute to open source</h1>
+<h2 id="怎样成为一位贡献者-how-to-become-a-contributor">怎样成为一位贡献者 (How to become a contributor)</h2>
+<p>中国开发社区一向是对开发软件索取无度，贡献却微乎其微。如此现状原因有很多，借口更多。 中国软也一向是年轻化，长江水后浪退前浪，前浪死在沙滩上，并没有像海浪一样，推向高潮。 能够在开源设区有影响力的灵魂人物屈指可数，影响力也十分有限。</p>
+<p>有很多年轻一代人对开源十分向往，也有激情投入进去，想有一翻作为，但是因素阻碍了他的向前进。</p>
+<ol type="1">
+<li>没有开源文化，没有社区气氛，无处投奔。</li>
+<li>十分需要领路人</li>
+</ol>
+<h2 id="为什么要成为一位贡献者">为什么要成为一位贡献者</h2>
+<p>你是不是发现你比较健忘的人，经常一分钟之前想做的事情，一分钟之后都忘记了。一年之前很精通的知识，可能一年之后也忘记的一干二净。 年轻时你可能更依赖大脑，但到了而立之年你就会像上面所说的。那么这么多年学的东西，等你突然用到一个几年前的技术，你会发现你必须重新学习。 但是你如记录下文档，便可以通过索引章节快速回忆，同时章节中的例子你可以拷贝复制直接使用。 另外我们也需要将经验留给后人</p>
+<h2 id="成为贡献者有什么好处">成为贡献者有什么好处？</h2>
+<p>当然有好处，最直接的就是社区影响力，把自己推销出去。 - 之前你为了一份工作可能需要投许多简历，然后被动的等待HR通知你面试，面试过程相当短暂，在短暂的时间里你要展现自己是非常困难的。但当你有一定影响力的时候，很多人会主动了解你，你会发现被动成主动，很多公司邀请你加入。 - 成就感，你会发现没加入一个群都有人认识你，叫你“大神” - 学习更有条理，更系统。之前你只懂得使用某一个软件的某一功能，因为写作需要，你必须搞清楚他所有的功能，才能传授给他人。</p>
+<h2 id="写作方式">写作方式</h2>
+<p>我的写作方式，并不是刻意去写，也不会占用业余时间(私人时间，如节假日)，而是在工作中记录概要，待空闲时完善章节。 工作中要到什么我就写什么，例如: 需要开发一个功能需要用到pthread.h, 如果我用过这个库，我会直接翻看我的文档pthread章节。我没有用过pthread便会google查找 pthread.h 用法以及例子，同时在我的文档中增加pthread章节，以及例子，以待下次可以直接从该章节获得帮助。</p>
+<p>你会发现自己的文档与官方文档的不同： - 经过细心过滤，上面的例子都是常用的，大部分人会用到的。 - 这些章节都是经过安排的，形同于索引，定位准确且迅速。</p>
+<p>而官方文档太过庞大，找到你需要的内容真要花点时间。 我的文档就是这样一点一点积累起来的，所有内容都是工作中遇到，如果再次遇到相关内容，便完善章节。</p>
+<h2 id="怎样切入">怎样切入</h2>
+<p>在参加项目之前我要说明一下，这可能是给你泼冷水。很多爱好者都出于三分钟热血，头脑发热。 你不要想着立即加入项目，作一番轰轰烈烈事情，写文档也好，写程序也好，都是苦修行，在相当长的一段时间你会非常寂寞，没有人理解你的贡献，都不看好你，认为你不会成功。</p>
+<ul>
+<li>选择一个你感兴趣的项目，多看看历史提交，看看别人怎么做</li>
+<li>做一些利索能及的事情，如改改错误，为文档增加索引</li>
+<li>要熟悉项目风格与结构</li>
+<li>你有大量的东西需要学习，包括各种工具，团队协作，团队沟通</li>
+</ul>
+<h2 id="前期条件">前期条件</h2>
+<ul>
+<li>你需要懂得怎样使用GIT版本控制工具</li>
+<li>你必须熟练使用Docbook XML标签</li>
+<li>你需要了解开源项目的运作方式</li>
+<li>懂得使用GITHUB网站提供的服务</li>
+</ul>
+<h2 id="新手指引">新手指引</h2>
+<p>这里给新手安排的一个学习计划，学习完成即可参加项目</p>
+<ul>
+<li>首先去http://www.github.com 注册一个账号，熟悉一下github.com提供的各种服务</li>
+<li>fork 我们的项目到自己的账号下，你可以随意修改这些代码</li>
+<li>学习 Docbook XML 创建基本实例</li>
+<li>学习 GIT 版本控制工具</li>
+</ul>            
+            
 	   	</div>
 		<div class="foot"></div>
 	</div>
    
+	</div>
+    <div class="sideWrap">
+        <?php $this->partial("book/sidebar") ?>
+    </div>
+</div>
