--- a/app/technology/views/index/index.phtml
+++ b/app/technology/views/index/index.phtml
@@ -2,33 +2,35 @@
 	<a href="http://my.oschina.net/neochen/">OSChina 博客</a> | 
 	<a href="http://rline.blog.51cto.com/">51CTO 博客</a>
     <div class="main-module">
-		<div class="head"><h2>原创文档</h2></div>
+		<div class="head"><h2>免费电子书项目</h2></div>
 		<div class="body">
+
+<p>《Netkiller 系列 手札》是一套免费系列电子书，netkiller 是nickname 从1999 开使用至今，“手札” 是札记，手册的含义。</p>
+<p>2003年之前我还是以文章形式在BBS上发表各类技术文章，后来发现文章不够系统，便尝试写长篇技术文章加上章节目录等等。随着内容增加，不断修订，开始发布第一版，第二版......</p>
+<p>IT知识变化非常快，而且具有时效性，这样发布非常混乱，经常有读者发现第一版例子已经过时，但他不知道我已经发布第二版。</p>
+<p>我便有一种想法，始终维护一个文档，不断更新，使他保持较新的版本不过时。</p>
+<p>第一部电子书是《PostgreSQL 实用实例参考》开始我使用 Microsoft Office Word 慢慢随着文档尺寸增加 Word 开始表现出力不从心。</p>
+<p>我看到PostgreSQL 中文手册使用SGML编写文档，便开始学习Docbook SGML。使用Docbook写的第一部电子书是《Netkiller Postfix Integrated Solution》这是Netkiller 系列手札的原型。</p>
+<p>至于“手札”一词的来历，是因为我爱好摄影，经常去一个台湾摄影网站，名字就叫“摄影家手札”。</p>
+<p>由于硬盘损坏数据丢失 《Netkiller Postfix Integrated Solution》 的 SGML文件已经不存在; Docbook SGML存在很多缺陷UTF-8支持不好，转而使用Docbook XML.</p>
+            
 		<div style="float:left;">
-			<ul>
-				<li><a href="/technology/linux/index.html">Netkiller Linux 手札</a></li>
-			  	<li><a href="/technology/developer/index.html">Netkiller Developer 手札</a></li>
-				<li><a href="/technology/security/index.html">Netkiller Security 手札</a></li>
-				<li><a href="/technology/docbook/index.html">Netkiller Document 手札</a></li>
-				<li><a href="/technology/database/index.html">Netkiller Database 手札</a></li>
-				<li><a href="/technology/ubuntu/index.html">Netkiller Ubuntu 手札</a></li>
-				<li><a href="/technology/centos/index.html">Netkiller CentOS 手札</a></li>
-				<li><a href="/technology/freebsd/index.html">Netkiller FreeBSD 手札</a></li>
-				
-			</ul>
+
 		</div>	
 		<div style="float:left;">	
-		<ul>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/architect/index.html">Netkiller Architect 手札</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/architect/index.html">大型网站架设指南</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/postgres/postgresql.html">PostgreSQL 实例参考</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/postfix/index.html">Postfix Solution</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/pureftpd/index.html">PureFTPD</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/proftpd/index.html">ProFTPD</a></li>
-			<li><a href="/technology/" class="score-812.5 endless-pages-found-next-link">More &gt;&gt;&gt;</a></li>		
-		</ul>
+
 		</div>
 	   	</div>
 		<div class="foot"></div>
 	</div>
-   
+
+   <div class="main-module">
+		<div class="head"><h2>文档的维护</h2></div>
+		<div class="body">
+<p>最开始所有 XML 文档托管在 http://netkiller.sourceforge.net/，由于大陆经常封锁后迁移到 http://netkiller.github.io/ 版本控制也随着迁移从Subversion 到 Git</p>
+<p>《Netkiller 系列 手札》 99.9% 由 netkiller 贡献。我也曾经想过吸收志同道合的朋友一起完成旷世之作，但真的很难。也可能是我的影响力还不够。</p>
+<p>自从转到github后我更致力于寻找继承者，考虑更多的是传承问题。</p>
+<p>目前《Netkiller 系列 手札》已有一定规模，量已经非常足，需要进一步细化，如果有一个写作团队，它会将影响很多人。同时我也在考虑是否有必要去掉 netkiller 一词。</p>      
+        </div>
+		<div class="foot"></div>
+	</div>
