--- a/app/views/shared/channel.phtml
+++ b/app/views/shared/channel.phtml
@@ -1,6 +1,6 @@
 	<div id="channel">
 		<div class="language">
-            <a class="" href="/">Home</a>
+			<?php echo Phalcon\Tag::linkTo(array( 'index', 'Home', 'target'=>"_parent", 'class' => 'on'));?></a>
             <?php foreach( $this->elements->getChannel() as $channel) {?>
                 | <?php echo Phalcon\Tag::linkTo(array( $channel['link'], $channel['title'], 'target'=>"_parent"/*, 'class' => ''*/));?></a>
             <?php }?>
