--- a/app/photography/views/collection/index.phtml
+++ b/app/photography/views/collection/index.phtml
@@ -14,8 +14,8 @@
 
           <div style="width:165px;height:200px;background:#EEE;border:1px solid #ccc;text-align:center;float:left;margin:0 0 5px 5px;display:inline;overflow:hidden;">
             <div style="width:128px;margin:5px;">
-                <a href="/photography/album/<?php echo $collection ?>/" rel="nofollow">
-                    <img src="/photography/album/<?php echo $collection ?>/" alt="Thumbnail..."/>
+                <a href="/photography/collection/album/<?php echo $collection ?>/" rel="nofollow">
+                    <img src="/photography/collection/album/<?php echo $collection ?>/" alt="Thumbnail..."/>
                 </a>
             </div>
           </div>		
