--- a/app/photography/views/collection/slide.phtml
+++ b/app/photography/views/collection/slide.phtml
@@ -5,8 +5,8 @@
 	<div class="body">
 
 		<div class="slide">
-		<a href="/photography/photo/<?php echo $imagepath ?>">
-			<img id="photo" src="/photography/image/<?php echo $imagepath ?>" onload="javascript:if(this.width>933) this.width=933;" />
+		<a href="/photography/collection/photo/<?php echo $imagepath ?>">
+			<img id="photo" src="/photography/collection/image/<?php echo $imagepath ?>" onload="javascript:if(this.width>933) this.width=933;" />
 		</a>
 		</div>
 
@@ -19,8 +19,8 @@
 <?php foreach($related as $image) { ?>
 <div style="width:98px;height:80px;background:#EEE;border:1px solid #ccc;text-align:center;float:left;margin:0 0 5px 5px;display:inline;overflow:hidden;">
 	<div style="width:95px;margin:3px;">
-		<a href="/photography/slide/<?php echo $collection?>/<?php echo $album ?>/<?php echo $image ?>" rel="nofollow">
-        <img style="width:128px;" src="/photography/thumbnail/<?php echo $collection?>/<?php echo $album ?>/<?php echo $image ?>" alt="Thumbnail..."/>
+		<a href="/photography/collection/slide/<?php echo $collection?>/<?php echo $album ?>/<?php echo $image ?>" rel="nofollow">
+        <img style="width:128px;" src="/photography/collection/thumbnail/<?php echo $collection?>/<?php echo $album ?>/<?php echo $image ?>" alt="Thumbnail..."/>
 		</a>
 	</div>
 </div>
