--- a/app/radio/views/layouts/profile.phtml
+++ b/app/radio/views/layouts/profile.phtml
@@ -1,4 +1,6 @@
+<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=IoN3tUhZjq78v2DyeztYLQEO"></script>
+
 <div class="wrapper">
     <div class="mainWrap">
         <?php echo $this->getContent() ?>
