--- a/app/radio/views/profile/equipment.phtml
+++ b/app/radio/views/profile/equipment.phtml
@@ -1,1 +1,114 @@
-equipment
+<?php use Phalcon\Tag; ?>
+    <div class="main-module">
+        <div class="head"><h2>呼号管理</h2></div>
+        <div class="body"> 
+
+        <table>
+           <thead>
+               <th>callsign</th>
+               <th>description</th>
+           </thead>
+           <tbody>
+               <?php /*foreach($callsigns as $callsign){ ?>
+               <tr>
+                   <td><a href="/radio/index/qrz/<?php echo $callsign->callsign ?>"><?php echo $callsign->callsign ?></td>
+                   <td><?php echo $callsign->description ?></td>
+               </tr>
+               <?php }*/?>
+           </tbody>
+        </table>                
+
+        </div>
+        <div class=foot></div>
+    </div>
+
+
+    <div class="side-module">
+        <div class="head"><h2>下列地址仅用于邮寄QSL卡片</h2></div>
+        <div class="body">
+       <?php /*
+        if($callsign)
+        Phalcon\Tag::setDefaults(array(
+            "callsign" => $callsign->callsign,
+            "description" => $callsign->description
+             ));*/
+        ?>
+        <?php echo Tag::form("radio/profile/equipment"); //echo Phalcon\Tag::hiddenField(array("id", "value" => @$qth->_id));?>
+        <table width="100%" border="0">
+           <tr>
+            <td><label for="callsign">设备</label></td>
+            <td>
+                <?php echo Phalcon\Tag::selectStatic("brand", array('品牌')) ?>
+                <?php echo Phalcon\Tag::selectStatic("transceiver", array('')) ?>
+                <script>
+
+$.getJSON( "/radio/index/brand", function( data ) {
+    $.each( data, function( key, val ) {
+        $("<option/>").attr("value", val).text(val).appendTo($("#brand"));
+    });
+});
+
+$("#brand").change(function () {
+    $("#transceiver, #city").find("option:gt(0)").remove();
+    $("#transceiver").find("option:first").text("Loading...");
+    $.getJSON("/radio/index/transceiver", {
+        brand: $(this).val()
+    }, function (json) {
+        $("#transceiver").find("option:first").text("请选择型号");
+        for (var i = 0; i < json.length; i++) {
+            $("<option/>").attr("value", json[i]).text(json[i]).appendTo($("#transceiver"));
+        }
+    });
+});
+                </script>
+                
+            </td>
+           </tr>
+           <tr>
+            <td><label for="antenna">天线</label></td>
+            <td>
+                <?php echo Phalcon\Tag::selectStatic("antbrand", array('品牌')) ?>
+                <?php echo Phalcon\Tag::selectStatic("antenna", array('')) ?>
+                <script>
+
+$.getJSON( "/radio/index/antbrand", function( data ) {
+    $.each( data, function( key, val ) {
+        $("<option/>").attr("value", val).text(val).appendTo($("#antbrand"));
+    });
+});
+
+$("#antbrand").change(function () {
+    $("#antenna, #city").find("option:gt(0)").remove();
+    $("#antenna").find("option:first").text("Loading...");
+    $.getJSON("/radio/index/antenna", {
+        brand: $(this).val()
+    }, function (json) {
+        $("#antenna").find("option:first").text("请选择型号");
+        for (var i = 0; i < json.length; i++) {
+            $("<option/>").attr("value", json[i]).text(json[i]).appendTo($("#antenna"));
+        }
+    });
+});
+                </script>
+                
+            </td>
+            
+          </tr>
+<!--          <tr>
+              <td><label for="description">description</label></td>
+              <td><?php echo Phalcon\Tag::textArea(array("description", "cols" => 90, "rows" => 4))?></td>
+          </tr>-->
+          <tr>
+              <td></td>
+              <td><?php echo Phalcon\Tag::checkField(array("default", "value" => "Y"));?> 目前正在使用</td>
+          </tr>
+          <tr>
+            <td colspan="2">
+                <?php echo Tag::submitButton("添加") ?>
+            </td>
+          </tr>
+        </table>
+        </form>                
+        </div>
+        <div class="foot"></div>
+    </div>
